2008-06-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Delay as much as
	  possible the initialization of the core assembly database. Fixes
	  some performance issues at MD startup.

2008-06-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Dom/DomCecilParameter.cs,
	  MonoDevelop.Projects.Dom/DomCecilMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilEvent.cs,
	  MonoDevelop.Projects.Dom/DomCecilField.cs,
	  MonoDevelop.Projects.Dom/DomCecilProperty.cs,
	  MonoDevelop.Projects.Dom/CompoundType.cs,
	  MonoDevelop.Projects.Dom/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/SimpleCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomCecilReturnType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomCecilAttribute.cs: Worked on dom and
	  code completion database.

2008-06-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs: Cosmetic fix.

2008-06-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/CompoundType.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs: Worked on new dom

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/Solution.cs,
	  MonoDevelop.Projects/SolutionEntityItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/Project.cs: Changed how the configuration
	  parameter is interpreted in SolutionItem and subclasses. This
	  parameter will always be a solution configuration, even when used